# Aadhaar-Pan-Link-Checker

./: .gitignore  README.md  aadhar_processing.db  app.py  database.py  models.py  pyproject.toml  requirements.txt  tasks.py  test_api.py  utils.py
data/: aadhar_processing.db
static/: input_format_template.xlsx
templates/: base.html  status.html  upload.html
