[project]
name = "aadhar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "asyncio-throttle>=1.0.2",
    "aiohttp>=3.9.0",
    "uvicorn>=0.35.0",
]
